fixed mobile overflow

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -886,7 +886,7 @@ button {
     &__dot2{
       width: 320px;
       height: 745px;
-      bottom: -369px;
+      bottom: -334px;
     }
 
 
